--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="header__container">
+        <header id="open" class="header">
+            <div id="close" class="header__container">
                 <a href="" class="header__logo">
                     <img src="img/logo.svg" alt="logo">
                 </a>
-                <nav class="header__menu menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">HOME</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">FEATURES</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">SUPPORT</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">CONTACT US</a>
-                        </li>
-                    </ul>
+                <div class="header__menu menu">
+                    <nav id="menu" class="menu__body">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">HOME</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">FEATURES</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">SUPPORT</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">CONTACT US</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
                 <div class="header__button">
                     <a href="" class="button button_blue" download>Download</a>
+                    <a href="#open" class="icon-menu"><span></span></a>
+                    <a href="#close" class="close-icon-menu"></a>
                 </div>
             </div>
         </header>
