--- a/index.html
+++ b/index.html
@@ -40,9 +40,34 @@
                 </div>
             </div>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <section class="get-started">
+                <div class="get-started__container">
+                    <div class="get-started__content">
+                        <div class="get-started__block-text block-text">
+                            <h1 class="block-text__title block-text__title_blue">Take care of yours family’s <span>health.</span></h1>
+                            <div class="block-text__text">All in one destination for COVID-19 health queries.  Consult 10,000+ health workers about your concerns.</div>
+                            <a href="" class="block-text__button button">Get started</a>
+                        </div>                      
+                    </div>
+                    <div class="get-started__image">
+                        <img src="img/get_started/img.svg" alt="Doctor with a child">
+                    </div>
+                    <div class="get-started__video">
+                        <a href="" class="video-get-started">
+                            <div class="video-get-started__icon">
+                                <img src="img/get_started/play.svg" alt="Button play">
+                            </div>
+                            <div class="video-get-started__body">
+                                <h6 class="video-get-started__title">Stay safe with GoCorona</h6>
+                                <div class="video-get-started__text">Watch video</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer class="footer">
-
         </footer>
     </div>
 </body>
