--- a/index.html
+++ b/index.html
@@ -117,13 +117,60 @@
                             </div>  
                         </div>
                         <div class="experts__video">
-                            <iframe src="https://www.youtube.com/embed/tNkNs0Xhw8Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/i0ZabxXmH4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
             </section>
+            <section class="healthcare">
+                <div class="healthcare__container">
+                    <div class="healthcare__block-text block-text block-text_center">
+                        <h2 class="block-text__title"><span>Healthcare</span>at your Fingertips.</h2>
+                        <div class="block-text__text block-text__text_mw">Bringing premium healthcare features to your fingertips. User friendly mobile platform to bring healthcare to your fingertips. Signup and be a part of the new health culture.</div>
+                    </div> 
+                     <div class="healthcare__items">
+                        <div class="healthcare__column healthcare__column_1">
+                            <div class="healthcare__item item-healthcare">
+                                <div class="item-healthcare__icon">
+                                    <img src="img/healthcare/1.svg" alt="human icon">
+                                </div>
+                                <h6 class="item-healthcare__title">Symptom Checker</h6>
+                                <div class="item-healthcare__text">Check if you are infected by COVID-19 with our Symptom Checker</div>
+                            </div>
+                        </div>
+                        <div class="healthcare__column healthcare__column_2">
+                            <div class="healthcare__item item-healthcare">
+                                <div class="item-healthcare__icon">
+                                    <img src="img/healthcare/2.svg" alt="doctor icon">
+                                </div>
+                                <h6 class="item-healthcare__title">24x7 Medical support</h6>
+                                <div class="item-healthcare__text">Consult with 10,000+ health workers about your concerns.</div>
+                            </div>
+                        </div>
+                        <div class="healthcare__column healthcare__column_3">
+                            <div class="healthcare__item item-healthcare">
+                                <div class="item-healthcare__icon">
+                                    <img src="img/healthcare/3.svg" alt="human icon">
+                                </div>
+                                <h6 class="item-healthcare__title">Conditions</h6>
+                                <div class="item-healthcare__text">Bringing premium healthcare features to your fingertips.</div>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__items">
+                    <a href="" class="footer__item">
+                        <img src="img/google_play.png" alt="Google Play">
+                    </a>
+                    <a href="" class="footer__item">
+                        <img src="img/apple_store.png" alt="Apple Store">
+                    </a>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
